Fixing responsive mobile issues

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -10,10 +10,10 @@
       </p>
     </div>
   </div>
-  <h2>Labs</h2>
+  <h2>Current Labs:</h2>
   <div class="row">
     <% @labs.each do |lab| %>
-    <div class="col-4 mb-4" style="justify-content: space-between;">
+    <div class="col-xs-12 col-md-4 mb-4" style="justify-content: space-between;">
                       
       <!--Card-->
       <div class="card" style="height: 100%">
