--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta name="viewport" content="width=device-width">
-    <title>Labs | Gospel Toolbox</title>
-    <%= csrf_meta_tags %>
+
+<head>
+  <meta name="viewport" content="width=device-width">
+  <title>Labs | Gospel Toolbox</title>
+  <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-  </head>
+</head>
 
-  <body>
-    
+<body>
+
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
       aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
@@ -40,8 +41,23 @@
         </div>
         <% end %>
 
-          <%= yield %>
+        <%= yield %>
 
-            <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </body>
+        <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+        <% if ENV.has_key? 'google_analytics_id' %>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=<%=ENV['google_analytics_id']%>"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+
+          function gtag() {
+            dataLayer.push(arguments);
+          }
+          gtag('js', new Date());
+
+          gtag('config', '<%=ENV["google_analytics_id"]%>');
+        </script>
+        <% end %>
+</body>
+
 </html>
