Adding link to source on github

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,9 +22,16 @@
 
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
       <ul class="navbar-nav mr-auto">
-
+        <li>
+          
+        </li>
       </ul>
       <ul class="navbar-nav ml-auto">
+        <li>
+          <a href="https://github.com/GospelToolbox/Labs" title="Source Code" target="_blank">
+            <img src="/img/GitHub-Mark-Light-64px.png" style="height: 30px">
+          </a>
+        </li>
       </ul>
 
     </div>
