Refactoring team schedule components

--- a/app/views/apps/teamschedule/index.html.erb
+++ b/app/views/apps/teamschedule/index.html.erb
@@ -1,5 +1,6 @@
 <% content_for :for_head do %>
   <%= javascript_pack_tag 'teamschedule' %>
+  <%= stylesheet_link_tag 'apps/teamschedule' %>
 <% end %>
 
 <%= react_component("App", {}, {prerender: false}) %>
