--- a/app/assets/stylesheets/apps/teamschedule.scss
+++ b/app/assets/stylesheets/apps/teamschedule.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the apps/teamschedule controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+table.serve-team-table {
+  td {
+    &.service-type-name,
+    &.team-name,
+    &.team-position-name {
+      white-space: nowrap;
+      font-weight: bold;
+      vertical-align: middle;
+    }
+  }
+}
