--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -30,7 +30,7 @@
 
               <div class="text-center">
               <% if lab[:url] %>
-                <a href="<%=lab[:url]%>"  data-turbolinks="false" class="btn btn-primary">Open</a>
+                <a href="<%=lab[:url]%>"  data-turbolinks="false" class="btn btn-primary btn-block">Open</a>
               <% else %>
                 <div class="alert alert-info">
                   Coming soon..
