Add placeholder cards for new labs

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,9 +1,9 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <h1>Try something new!</h1>
+      <h1>Next Generation Church Productivity</h1>
       <p>
-        The Gospel Toolbox Labs is where you can find all of the new or experimental ideas that are being tested out for prime time.
+        The Gospel Toolbox Labs are where you can find all of the new or experimental ideas that are being tested out for prime time.
       </p>
       <p>
         Give them a try in your organization and leave us some feedback. Or if you have an idea to suggest, let us know!
