Update set planner views
- Add PCO syncing buttons
- List plans

--- a/engines/set_planner/app/views/set_planner/plans/refine.html.erb
+++ b/engines/set_planner/app/views/set_planner/plans/refine.html.erb
@@ -11,7 +11,7 @@
 <h2>Songs Needed</h2>
 <p><%=@plan.songs_needed%></p>
 
-<h2>Songs</h2>
+<h2>Songs (<%=@plan.pco_plan_songs.count%>)</h2>
 <table class="table">
   <thead>
     <tr>
