Improve the set planner styling

--- a/engines/set_planner/app/views/layouts/set_planner/application.html.erb
+++ b/engines/set_planner/app/views/layouts/set_planner/application.html.erb
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en"> 
 <head>
-  <title>Set planner</title>
+  <!-- Required meta tags --> 
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <title>Set planner | Gospel Toolbox</title>
   <%= stylesheet_link_tag    "set_planner/application", media: "all" %>
   <%= javascript_include_tag "set_planner/application" %>
   <%= csrf_meta_tags %>
