--- a/engines/set_planner/app/assets/stylesheets/set_planner/application.scss
+++ b/engines/set_planner/app/assets/stylesheets/set_planner/application.scss
@@ -12,4 +12,11 @@
  *
  *= require_tree .
  *= require_self
+*= require font-awesome
  */
+
+$border-radius: 0;
+$border-radius-lg: 0;
+$border-radius-sm: 0;
+
+@import "bootstrap/scss/bootstrap";
