--- a/engines/set_planner/app/views/set_planner/plans/index.html.erb
+++ b/engines/set_planner/app/views/set_planner/plans/index.html.erb
@@ -1,18 +1,26 @@
-<h1>Plans</h1>
 
-<%=link_to("New Plan", new_plan_path)%>
+<div class="container">
+  <h1>Plans</h1>
 
-<table class="table">
-  <thead>
-    <tr>
-      <th>Name</th>
-    </tr>
-  </thead>
-  <tbody>
-   <% @plans.each do |plan| %>
-    <tr>
-      <td><%=link_to(plan.title, plan_path(plan.id))%></td>
-    </tr>
-    <% end %>  
-  </tbody>
-</table>
+  <div class="row p-1">
+    <%=link_to("New Plan", new_plan_path, class: 'btn btn-primary')%>
+  </div>
+
+  <div class="row">
+    <table class="table">
+      <thead>
+        <tr>
+          <th>Name</th>
+        </tr>
+      </thead>
+      <tbody>
+      <% @plans.each do |plan| %>
+        <tr>
+          <td><%=link_to(plan.title, plan_path(plan.id))%></td>
+        </tr>
+        <% end %>  
+      </tbody>
+    </table>
+  </div>
+</div>
+
