--- a/engines/set_planner/app/views/set_planner/plans/new.html.erb
+++ b/engines/set_planner/app/views/set_planner/plans/new.html.erb
@@ -1,27 +1,36 @@
+<div class="container">
+
+<div class="p-1">
+  <%=link_to '< Back to plans', plans_path %>
+</div>
+
 <h1>New Plan</h1>
 
 <%= form_with scope: :plan, url: plans_path, local: true do |form| %>
-  <p>
+  <div class="form-group">
     <%= form.label :title %><br>
-    <%= form.text_field :title %>
-  </p>
- 
-  <p>
+    <%= form.text_field :title, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
     <%= form.label :description %><br>
-    <%= form.text_area :description %>
-  </p>
+    <%= form.text_area :description, class: "form-control" %>
+  </div>
 
-  <p>
+  <div class="form-group">
     <%= form.label :start_date %><br>
-    <%= form.text_field :start_date %>
-  </p>
+    <%= form.text_field :start_date, class: "form-control" %>
+    <small id="startDateHelp" class="form-text text-muted">YYYY-MM-DD</small>
+  </div>
 
-  <p>
+  <div class="form-group">
     <%= form.label :number_of_weeks %><br>
-    <%= form.text_field :number_of_weeks %>
-  </p>
+    <%= form.text_field :number_of_weeks, class: "form-control" %>
+  </div>
  
   <p>
-    <%= form.submit %>
+    <%= form.submit class: 'btn btn-primary' %>
   </p>
 <% end %>
+
+</div>
